--- a/css/global.css
+++ b/css/global.css
@@ -1,10 +1,7 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-
 body {
     box-sizing: border-box;
+    font-weight: 200;
+    letter-spacing: 1px;
 }
 
 a:hover {
@@ -54,7 +51,8 @@ a:hover {
 
 #nav ul {
     list-style: none;
-    background-color: rgba(0, 0, 0, 0.705);
+    background: rgb(2,0,36);
+background: linear-gradient(177deg, rgba(2,0,36,1) 0%, rgba(78,78,83,1) 69%, rgba(255,255,255,1) 100%);
   }
 
 nav ul li a {
