--- a/css/handheld.css
+++ b/css/handheld.css
@@ -6,12 +6,17 @@
         height: 5rem;
         width: 7rem;
     }
+
+    .follow{
+        margin: 0.7rem 0;
+    }
     #menu {
         position: absolute;
+        top: 0;
         display:none;
         margin: 1rem;
         padding: 2rem;
-        background-color: rgba(189, 146, 253, 0.8);
+        background-color: rgba(190, 189, 178, 0.849);
         flex-direction: column;
         justify-content: space-around;
         align-items: center;
@@ -19,14 +24,22 @@
     }
 
     .mobileNavbar{
-        padding: 1rem 0;
+        padding: 0.5rem;
         display:flex;
         justify-content: space-around;
         align-items: center;
-        background-color:rgba(0, 0, 0, 0.918);
+        background: rgb(2,0,36);
+background: linear-gradient(177deg, rgba(2,0,36,1) 0%, rgba(78,78,83,1) 69%, rgba(255,255,255,1) 100%);
     }
     .mobileNavbar span{
-        color: white;
+        font-size: 1.2rem;
+    font-weight: 200;
+    color:black;
+    background-color: rgba(190, 189, 178, 0.849);
+    border-radius: 20px;
+    padding: 0.1rem 0.8rem;
+    margin: 0.3rem;
+    text-transform: uppercase;
     }
     #mobileLogo{
         height: 4rem;
@@ -62,5 +75,21 @@
     #nav ul li {
         padding: 1rem;
         width: 85vw;
+    }
+}
+
+@media screen and (max-width:490px){
+    .mobileNavbar span {
+        font-size: 0.9rem;
+    }
+    #mobileLogo{
+        height: 2rem;
+        width:2rem;
+    }
+}
+
+@media screen and (max-width:391px){
+    .logoText {
+        display:none;
     }
 }
